# udemy_cpp_course_2

./: .gitignore  CMakeLists.txt
module14-subdirectories/: Root-CMakeLists.txt
module14-subdirectories/app/: main.cpp
module14-subdirectories/src/my_lib/: my_lib.cpp
module15-variables/: Root-CMakeLists.txt
module15-variables/app/: CMakeLists.txt
module15-variables/src/my_lib/: my_lib.h
